--- a/saveasapp/index.html
+++ b/saveasapp/index.html
@@ -12,6 +12,9 @@
         <h1>Save As Web App</h1>
         <input type="text" id="url-input" placeholder="Enter website URL">
         <br>
+        <button id="icon-btn">Choose Icon</button>
+        <input type="file" id="icon-input" accept="image/*" style="display: none;">
+        <br>
         <button id="save-btn">Save As Web App</button>
     </div>
     <script src="script.js"></script>
