--- a/saveasapp/redirect.html
+++ b/saveasapp/redirect.html
@@ -14,6 +14,11 @@
                 }, 5000); // 5-second delay
             }
         });
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            e.prompt();
+        });
     </script>
 </head>
 <body>
