--- a/rebornos/1.1/index.html
+++ b/rebornos/1.1/index.html
@@ -16,7 +16,7 @@
     }
     /* Desktop background using an online image from Unsplash */
     #desktop {
-      background: url('https://source.unsplash.com/1920x1080/?landscape') no-repeat center center;
+      background: url('https://wallpaperaccess.com/full/317501.jpg') no-repeat center center;
       background-size: cover;
       position: relative;
       height: calc(100% - 40px); /* Taskbar height assumed 40px */
